[package]
name = "scan"
version = "0.1.0"
edition = "2024"
description = "Statistical model checker for large concurrent systems."
documentation = "https://convince-project.github.io/scan/crates/scan/index.html"
homepage = "https://convince-project.github.io/scan/"
repository = "https://github.com/convince-project/scan"
readme = "README.md"
license = "Apache-2.0"
keywords = ["verification", "model-checking"]
categories = ["compilers", "concurrency", "parser-implementations", "science::robotics", "simulation"]

[lib]
name = "scan"     # The name of the target.
crate-type = ["lib"]   # The crate types to generate.

[[bin]]
name = "scan"     # The name of the target.

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
# debug = true # only to run profiling

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["scan_core", "scan_scxml", "scan_jani", "scan_promela"]

[workspace.dependencies]
anyhow = "1.0.100"
csv = "1.4.0"
flate2 = { version = "1.1.5", features = ["zlib-rs"], default-features = false }
log = "0.4.28"
rand = { version = "0.9.2", features = ["small_rng"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.50", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.8"
human-panic = "2.0.3"
indicatif = { version = "0.18.1", features = ["improved_unicode"] }
log = { workspace = true }
scan_core = { version = "0.1.0", path = "scan_core" }
scan_jani = { version = "0.1.0", path = "scan_jani" }
scan_scxml = { version = "0.1.0", path = "scan_scxml" }
scan_promela = { version = "0.1.0", path = "scan_promela" }
serde = { workspace = true }
serde_json = { workspace = true }
