[package]
name = "smc_scan"
version = "0.1.0"
edition = "2024"
description = "Statistical model checker for large concurrent systems."
documentation = "https://convince-project.github.io/scan/crates/scan/index.html"
homepage = "https://convince-project.github.io/scan/"
repository = "https://github.com/convince-project/scan"
readme = "README.md"
license = "Apache-2.0"
keywords = ["verification", "model-checking"]
categories = ["compilers", "concurrency", "parser-implementations", "science::robotics", "simulation"]
exclude = [
    "scan_book/*",
    ".github/*"
]

[lib]
name = "scan"     # The name of the target.
crate-type = ["lib"]   # The crate types to generate.

[[bin]]
name = "scan"     # The name of the target.
path = "src/main.rs"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
# debug = true # only to run profiling

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["scan_core", "scan_scxml", "scan_jani", "scan_promela"]

[workspace.dependencies]
anyhow = "1.0.102"
csv = "1.4.0"
flate2 = { version = "1.1.9", features = ["zlib-rs"], default-features = false }
log = "0.4.29"
rand = { version = "0.10.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.6.0", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.10"
human-panic = "2.0.7"
indicatif = { version = "0.18.4", features = ["improved_unicode"] }
log = { workspace = true }
smc_scan_core = { version = "0.1.0", path = "scan_core" }
smc_scan_jani = { version = "0.1.0", path = "scan_jani" }
smc_scan_scxml = { version = "0.1.0", path = "scan_scxml" }
smc_scan_promela = { version = "0.1.0", path = "scan_promela" }
serde = { workspace = true }
serde_json = { workspace = true }
