[package]
name = "smc_scan"
version = "0.3.0"
edition = "2024"
description = "Statistical model checker for large concurrent systems."
documentation = "https://convince-project.github.io/scan/crates/scan/index.html"
homepage = "https://convince-project.github.io/scan/"
repository = "https://github.com/convince-project/scan"
readme = "README.md"
license = "Apache-2.0"
keywords = ["verification", "model-checking"]
categories = [
  "compilers",
  "concurrency",
  "parser-implementations",
  "science::robotics",
  "simulation"
]
exclude = ["scan_book/*", ".github/*"]

[features]
default = ["scxml", "jani"]
scxml = ["dep:smc_scan_scxml"]
jani = ["dep:smc_scan_jani"]
promela = ["dep:smc_scan_promela"]

[lib]
name = "scan"  # The name of the target.
crate-type = ["lib"]  # The crate types to generate.

[[bin]]
name = "scan"  # The name of the target.
path = "src/main.rs"

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1
debug = "none"

[profile.profiling]
inherits = "release-lto"
debug = "full"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "scan_core",
  "scan_scxml",
  "scan_jani",
  "scan_promela",
  "scan_pmtl",
  "scan_mtl"
]

[workspace.dependencies]
anyhow = "1.0.102"
csv = "1.4.0"
log = "0.4.33"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.6.1", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.10"
indicatif = { version = "0.18.4", features = ["improved_unicode"] }
log = { workspace = true }
smc_scan_core = { version = "0.2.0", path = "scan_core" }
smc_scan_jani = { version = "0.2.0", path = "scan_jani", optional = true }
smc_scan_scxml = { version = "0.3.0", path = "scan_scxml", optional = true }
smc_scan_promela = { version = "0.2.0", path = "scan_promela", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
