[package]
name = "scan_core"
version = "0.1.0"
edition = "2024"
documentation = "https://convince-project.github.io/scan/crates/scan_core/index.html"
homepage = "https://convince-project.github.io/scan/"
repository = "https://github.com/convince-project/scan"
license = "Apache-2.0"
readme = "README.md"
keywords = ["verification", "model-checking"]
categories = ["compilers", "concurrency", "parser-implementations", "science::robotics", "simulation"]

[lib]
name = "scan_core"     # The name of the target.
crate-type = ["lib"]   # The crate types to generate.

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = "1.11.0"
smallvec = "1.15.1"

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "program_graph"
harness = false
