[package]
name = "smc_scan_promela"
version = "0.1.0"
edition = "2024"
description = "Promela frontend for the Scan model checker."
documentation = "https://convince-project.github.io/scan/crates/scan_promela/index.html"
homepage = "https://convince-project.github.io/scan/"
repository = "https://github.com/convince-project/scan"
license = "Apache-2.0"
readme = "README.md"
keywords = ["verification", "model-checking", "promela"]
categories = ["compilers", "concurrency", "parser-implementations", "science::robotics", "simulation"]

[lib]
name = "scan_promela"  # The name of the target.
crate-type = ["lib"]   # The crate types to generate.

[build-dependencies]
cfgrammar = "0.14"
lrlex = "0.14.1"
lrpar = "0.14.1"

[dependencies]
cfgrammar = "0.14"
lrlex = "0.14.1"
lrpar = "0.14.1"
regex = "1"
smc_scan_core = { version = "0.1.0", path = "../scan_core" }
anyhow = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
