[package]
name = "scan_scxml"
version = "0.1.0"
edition = "2024"
documentation = "https://convince-project.github.io/scan/crates/scan_scxml/index.html"
homepage = "https://convince-project.github.io/scan/"
repository = "https://github.com/convince-project/scan"
license = "Apache-2.0"

[lib]
name = "scan_scxml"  # The name of the target.
crate-type = ["lib"]   # The crate types to generate.

[dependencies]
scan_core = { version = "0.1.0", path="../scan_core" }
anyhow = { workspace = true }
boa_ast = "0.20.0"
boa_interner = "0.20.0"
boa_parser = "0.20.0"
log = { workspace = true }
rand = { workspace = true }
quick-xml = "0.38.3"
thiserror = { workspace = true }
logos = "0.15.1"
chumsky = "0.11.1"
csv = { workspace = true }
flate2 = { workspace = true }
